# Digit_Fall_Prediction_Dataset

./: .gitignore  README.md  dataset_public.py  main.py  requirements.txt  setup_data.sh  tutorial.ipynb
c_functions/: CMakeLists.txt
utils/: DynamicsCalculator.py  dataset.py  params.yaml  vizualize_digit.py
